<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_selected_ap_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:text="@string/inaccuracy_recorded"
                android:textColor="@color/blue"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:lines="1"
                    android:text="@string/x"
                    android:textColor="@color/blue" />


                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:lines="1"
                    android:text="@string/y"
                    android:textColor="@color/blue" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:lines="1"
                    android:text="@string/floor"
                    android:textColor="@color/blue" />

                <TextView
                    android:id="@+id/rv_inaccuracy_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:lines="1"
                    android:text="@string/inaccuracy"
                    android:textColor="@color/blue" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/inaccuracy_recycler"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                tools:listitem="@layout/inaccuracy_list" />

            <Button
                android:id="@+id/ap_clear_database"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="80dp"
                android:backgroundTint="@color/blue"
                android:text="@string/clear_database"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="bold">


            </Button>

        </LinearLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>