<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        xmlns:tools="http://schemas.android.com/tools">

        <TextView
            android:id="@+id/text_selected_ap_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:textSize="20sp"
            android:textColor="@color/green"
            android:text="@string/ap_added" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/selected_ap_mac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:lines="1"
                android:textColor="@color/green"
                android:text="@string/mac_text" />

            <TextView
                android:id="@+id/selected_ap_ssid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:lines="1"
                android:textColor="@color/green"
                android:text="@string/ssid_text" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/selected_ap_list_rv"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="7dp"
            tools:listitem="@layout/selected_ap_list" />

    </LinearLayout>

</layout>