<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:background="@color/dark_blue"
        android:padding="5dp"
        android:layout_gravity="bottom|center_horizontal">

        <TextView
            android:id="@+id/back_button_record_inaccuracies"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:text="@string/X"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_gravity="end"
            android:gravity="center"
            android:background="@drawable/circle_background"
            android:clickable="true"
            android:focusable="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_gravity="center"
                android:text="Record Inaccuracy"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="211dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="0dp"
                        android:padding="10dp"
                        android:text="Inaccuracy: "
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="0dp"
                        android:padding="10dp"
                        android:text="@string/x_coordinate"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="0dp"
                        android:padding="10dp"
                        android:text="@string/y_coordinate"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:id="@+id/inaccuracy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:layout_gravity="center"
                        android:textColor="@color/blue"
                        android:textSize="25sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/x_coordinate_record_inaccuracy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:layout_gravity="center"
                        android:textColor="@color/blue"
                        android:textSize="25sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/y_coordinate_record_inaccuracy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:layout_gravity="center"
                        android:textColor="@color/blue"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="30dp"
                android:text="Confirm?"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/yes_button_add_recording"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="28sp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_curved_edges"
                android:clickable="true"
                android:focusable="true" />
        </LinearLayout>
    </LinearLayout>
</layout>